[gd_scene load_steps=13 format=3 uid="uid://b2n8pu88uel4m"]

[ext_resource type="Texture2D" uid="uid://cmi530xpkjjs2" path="res://Assets/Textures/Sprites/Enemy.png" id="2_c1sb3"]
[ext_resource type="Texture2D" uid="uid://ck6fp748sojeq" path="res://Assets/Textures/GUI/ProgressBar/health.png" id="2_dcq1i"]
[ext_resource type="Script" path="res://Scripts/health_bar.gd" id="2_lpa6t"]
[ext_resource type="Script" path="res://Scripts/health_component.gd" id="4_v1qa6"]
[ext_resource type="Script" path="res://Scripts/pathfind_component.gd" id="5_xqv7b"]
[ext_resource type="Script" path="res://Scripts/velocity_component.gd" id="6_ve8ou"]
[ext_resource type="Script" path="res://Scripts/hitbox_component.gd" id="7_ilybj"]
[ext_resource type="Script" path="res://Scripts/grid_object_component.gd" id="7_wfhtc"]
[ext_resource type="PackedScene" uid="uid://dr0bw6exgpsnu" path="res://Scenes/projectile_manager.tscn" id="8_5hrw0"]
[ext_resource type="PackedScene" uid="uid://b2sdkbad4nebq" path="res://Scenes/simple_projectile_shooter.tscn" id="8_d473n"]
[ext_resource type="Script" path="res://Scripts/loot_table_component.gd" id="10_m1js1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mced2"]
radius = 4.5
height = 9.5

[node name="Enemy" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.57079
scale = Vector2(3.5, 3.5)
texture = ExtResource("2_c1sb3")

[node name="HealthBar" type="TextureProgressBar" parent="." node_paths=PackedStringArray("health_component")]
offset_left = -28.0
offset_top = -32.0
offset_right = 28.0
offset_bottom = -24.0
pivot_offset = Vector2(28, 32)
texture_progress = ExtResource("2_dcq1i")
script = ExtResource("2_lpa6t")
health_component = NodePath("../HealthComponent")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_v1qa6")

[node name="PathfindComponent" type="Node2D" parent="." node_paths=PackedStringArray("velocity_component", "grid_object_component")]
script = ExtResource("5_xqv7b")
velocity_component = NodePath("../VelocityComponent")
grid_object_component = NodePath("../GridObjectComponent")
separation_weight = 0.5
target_weight = 0.6

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("6_ve8ou")
max_speed = 175.0

[node name="GridObjectComponent" type="Node2D" parent="."]
script = ExtResource("7_wfhtc")

[node name="HitBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 0
collision_mask = 2
script = ExtResource("7_ilybj")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(-1.5, 0)
scale = Vector2(3.5, 3.5)
shape = SubResource("CapsuleShape2D_mced2")

[node name="ProjectileManager" parent="." instance=ExtResource("8_5hrw0")]

[node name="SimpleProjectileShooter" parent="ProjectileManager" instance=ExtResource("8_d473n")]

[node name="LootTableComponent" type="Node" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("10_m1js1")
loot_table = {
"coin": 50,
"xp": 50
}
rolls = 3
health_component = NodePath("../HealthComponent")
